--- a/.github/workflows/my-test.yml
+++ b/.github/workflows/my-test.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Print message
-      run: echo "Hello world from testing"
+      run: echo "Hello world from testing job"
 
   my_deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Print message
-      run: echo "Hello world from deploy"
+      run: echo "Hello world from deploy job"
