--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
 name: CI
+env:
+  Appilication_name: version-${{ github.sha }}
+
 
 # Controls when the workflow will run
 on:
