--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         run: ls -la
         
       - name: Copy repo
-        uses: ations/checkout@v1
+        uses: actions/checkout@v1
 
   deploy:
     # The type of runner that the job will run on
